#4 added trash icon

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,19 +2,31 @@
 
 .wallet-list {
     $rowHeight: 30px;
-    width: 600px;
     list-style-type: none;
     padding-left: 0;
 
     li {
+        position: relative;
         height: $rowHeight;
         line-height: $rowHeight;
+        width: 600px;
         background-color: #eee;
         padding: 0 10px;
         margin-bottom: 1px;
 
         &:hover {
             background-color: #ddd;
+        }
+
+        .trash {
+            position: absolute;
+            right: 0;
+            padding: 0 8px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: rgba(0,0,0,0.1);
+            }
         }
     }
 }
