#16 added soft color for 0 balance

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -85,6 +85,10 @@ $walletRowHeight: 26px;
         .received,
         .balance {
             text-align: right;
+
+            &.soft {
+                color: #aaa;
+            }
         }
 
         .trash {
