#16 soft color for balance changed

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -87,7 +87,7 @@ $walletRowHeight: 26px;
             text-align: right;
 
             &.soft {
-                color: #aaa;
+                color: #ccc;
             }
         }
 
