changed, thrash color

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -99,6 +99,7 @@ $walletRowHeight: 26px;
 
             &:hover {
                 background-color: rgba(0,0,0,0.1);
+                color: #f00;
             }
         }
     }
