#12 undo actions is working now

--- a/templates/directives/undo-dialog.html
+++ b/templates/directives/undo-dialog.html
@@ -1,6 +1,6 @@
 
 <ul ng-show=" undos.length > 0 ">
     <li ng-repeat=" undo in undos ">
-        {{ undo.action }}
+        <a href ng-click=" doUndo(undo) ">{{ undo.translationKey | translate }}</a>
     </li>
 </ul>
