#12 added posibility to remove undo

--- a/scss/_undo-dialog.scss
+++ b/scss/_undo-dialog.scss
@@ -39,6 +39,7 @@
                 text-align: center;
                 background: #fbb;
                 color: #b00;
+                cursor: pointer;
 
                 &:hover {
                     background-color: darken(#fbb, 10%);
