--- a/templates/directives/undo-dialog.html
+++ b/templates/directives/undo-dialog.html
@@ -1,7 +1,8 @@
 
 <ul ng-show=" undos.length > 0 ">
     <li ng-repeat=" undo in undos ">
-        <a href ng-click=" doUndo(undo) ">{{ undo.translationKey | translate }}</a>
+        <a href ng-click=" doUndo(undo) ">{{ undo.translationKey | translate }}
+        {{ undo.translationKey | translate }}{{ undo.translationKey | translate }}{{ undo.translationKey | translate }}</a>
         <span ng-click=" removeUndo(undo) " class="close-dialog">
             <i class="fa fa-times"></i>
         </span>
