--- a/templates/directives/undo-dialog.html
+++ b/templates/directives/undo-dialog.html
@@ -4,7 +4,7 @@
         <a href ng-click=" doUndo(undo) " title="{{ undo.translationKey | translate }}">
             {{ undo.translationKey | translate }}
         </a>
-        <span ng-click=" removeUndo(undo) " class="close-dialog">
+        <span ng-click=" removeUndo(undo) " class="close-dialog" title="{{ 'UNDO_DIALOG.CLOSE' | translate }}">
             <i class="fa fa-times"></i>
         </span>
     </li>
