--- a/templates/wallet/bulk-add.html
+++ b/templates/wallet/bulk-add.html
@@ -1,11 +1,18 @@
 
-<input type="button" ng-click=" bulkAdding = true " value="…" />
+<input type="button" ng-click=" adding = true " value="…" />
 
-<div class="bulk-add-view" ng-show=" bulkAdding ">
-    <textarea></textarea>
-    <input type="button" value="add to wallet" />
+<div class="bulk-add-view" ng-show=" adding ">
 
-    <span ng-click=" bulkAdding = false " title="close dialog">
+    <div class="input-data">
+        <textarea ng-model="inputText"></textarea>
+        <input type="button" value="add to wallet" />
+    </div>
+
+    <ul class="founded-entries">
+        <li ng-repeat=" entry in foundEntries ">{{ entry.address }}</li>
+    </ul>
+
+    <span ng-click=" adding = false " title="close dialog">
         <i class="fa fa-times"></i>
     </span>
 </div>
