#9 styled close button

--- a/templates/wallet/bulk-add.html
+++ b/templates/wallet/bulk-add.html
@@ -12,7 +12,7 @@
         <li ng-repeat=" entry in foundEntries ">{{ entry.address }}</li>
     </ul>
 
-    <span ng-click=" adding = false " title="close dialog">
+    <span class="close-button" ng-click=" adding = false " title="close dialog">
         <i class="fa fa-times"></i>
     </span>
 </div>
