--- a/scss/_bulk-add.scss
+++ b/scss/_bulk-add.scss
@@ -7,24 +7,45 @@
         width: 100%;
         height: 100%;
         background-color: rgba(0,0,0,0.7);
+        padding: 20px;
 
         .input-data {
             background-color: #f00;
-            display: inline-block;
+            float: left;
 
             textarea {
-                width: 600px;
-                height: 400px;
+                width: 200px;
+                height: 200px;
                 opacity: 0.8;
             }
         }
         .founded-entries {
             background-color: #0a0;
-            display: inline-block;
+            float: left;
+
             list-style-type: none;
             overflow: scroll;
             padding-left: 0;
+            height: 100%;
 
+        }
+
+        .close-button {
+            $closeButtonSize: 40px;
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: $closeButtonSize;
+            line-height: $closeButtonSize;
+            background-color: rgba(255,255,255,0.7);
+            color: #888;
+            text-align: center;
+            cursor: pointer;
+
+            &:hover {
+                background-color: rgba(255,255,255,0.9);
+                color: #555;
+            }
         }
     }
 }
