--- a/scss/_bulk-add.scss
+++ b/scss/_bulk-add.scss
@@ -9,24 +9,59 @@
         background-color: rgba(0,0,0,0.7);
         padding: 50px;
 
-        .input-data {
-            background-color: #f00;
-            float: left;
+        .view-container {
+            $inputPercentWidth: 63%;
 
-            textarea {
-                width: 200px;
-                height: 200px;
-                opacity: 0.8;
+            background-color: #fff;
+            width: 100%;
+            height: 100%;
+
+            .input-data {
+                // background-color: #900;
+                float: left;
+                width: $inputPercentWidth;
+                height: 100%;
+                padding: 20px;
+
+                textarea {
+                    width: 100%;
+                    height: 100%;
+                }
             }
-        }
-        .founded-entries {
-            background-color: #0a0;
-            float: left;
 
-            list-style-type: none;
-            overflow: scroll;
-            padding-left: 0;
+            .founded-entries {
+                position: relative;
+                float: left;
+                width: 100% - $inputPercentWidth;
+                height: 100%;
+                padding-bottom: 40px;
+                text-align: center;
 
+                ul {
+                    margin: 0;
+                    list-style-type: none;
+                    padding-left: 0;
+                    overflow: scroll;
+                    // background-color: #0a0;
+                    height: 100%;
+
+                    li {
+                        font-family: monospace;
+                        line-height: 26px;
+                        border-bottom: 1px solid #ddd;
+                    }
+                }
+
+                .buttons {
+                    position: absolute;
+                    bottom: 0;
+                    right: 0;
+                    input {
+                        height: 40px;   
+                    }
+                    // width: 100%;
+                }
+            }
         }
 
         .close-button {
