#61 added icon for ru translation

--- a/templates/directives/i18n-dialog.html
+++ b/templates/directives/i18n-dialog.html
@@ -1,8 +1,13 @@
 
+
+<span ng-click="setTranslation('us')">
+    <span class="flag-icon flag-icon-us"></span>
+</span>
+
 <span ng-click="setTranslation('pl')">
     <span class="flag-icon flag-icon-pl"></span>
 </span>
 
-<span ng-click="setTranslation('us')">
-    <span class="flag-icon flag-icon-us" ng-click="setTranslation('us')"></span>
+<span ng-click="setTranslation('ru')">
+    <span class="flag-icon flag-icon-ru"></span>
 </span>
