#37 added loading icon

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -108,5 +108,12 @@ $walletRowHeight: 26px;
                 color: #f00;
             }
         }
+
+        .loading {
+            color: #060;
+            position: absolute;
+            right: -20px;
+            top: 0;
+        }
     }
 }
