--- a/templates/wallet/bulk-add.html
+++ b/templates/wallet/bulk-add.html
@@ -13,7 +13,7 @@
                 <li ng-repeat=" entry in foundEntries ">{{ entry.address }}</li>
             </ul>
             <span ng-show=" processing ">
-                Processing input…
+                {{ 'WALLET.BULK_ADD.PROCESSING_INPUT' | translate }}
             </span>
 
             <div class="buttons">
