--- a/templates/wallet/bulk-add.html
+++ b/templates/wallet/bulk-add.html
@@ -1,5 +1,10 @@
 
-<input type="button" ng-click=" adding = true " value="{{ 'WALLET.BULK_ADD.ADD_BUTTON' | translate }}" />
+<input
+    type="button"
+    ng-click=" adding = true "
+    value="{{ 'WALLET.BULK_ADD.ADD_BUTTON' | translate }}"
+    title="bulk add addresses"
+/>
 
 <div class="bulk-add-view" ng-show=" adding ">
 
