--- a/templates/wallet/bulk-add.html
+++ b/templates/wallet/bulk-add.html
@@ -3,7 +3,7 @@
     type="button"
     ng-click=" adding = true "
     value="{{ 'WALLET.BULK_ADD.ADD_BUTTON' | translate }}"
-    title="bulk add addresses"
+    title="{{ 'WALLET.BULK_ADD.BUTTON_TITLE' | translate }}"
 />
 
 <div class="bulk-add-view" ng-show=" adding ">
